tree-sitter-urd/grammar.js
    source_file: ($) => repeat($._statement_or_newline),

    _statement_or_newline: ($) => choice("\n", $._statement),

    line_comment: (_) => token(prec(-1, seq("#", /[^"\n]*/))),

    // -----------------------------------------------------------------------
    // Literals
    // -----------------------------------------------------------------------

    integer: (_) =>
      token(
        choice(
          /0x[0-9a-fA-F][0-9a-fA-F_]*/,
          /0b[01][01_]*/,
          /0o[0-7][0-7_]*/,
          /[0-9][0-9_]*/,
        ),
      ),

    // Float: requires `.` or exponent to distinguish from integer.
    float: (_) =>
      token(
        choice(
          /(?:[0-9][0-9_]*)?\.([0-9][0-9_]*)(?:[eE][+-]?[0-9][0-9_]*)?/,
          /[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*/,
        ),
      ),

    boolean: (_) => choice("true", "false"),

    null: (_) => "null",

    // Dice: NdM or NDM, 1-3 digits each side, e.g. 2d6, 1D20.
    dice: (_) => token(/\d{1,3}[dD]\d{1,3}/),

    // -----------------------------------------------------------------------
    // Strings (multiline, interpolated)
    // -----------------------------------------------------------------------

    string: ($) =>
      seq(
        '"',
        repeat(
          choice($.string_literal_fragment, $.escape_sequence, $.interpolation),
        ),
        '"',
      ),

    // prec(1) beats line_comment's prec(-1) so that when both tokens match
    // the same span of characters (e.g. `#FF0000` right after the opening `"`)
    // the string fragment wins.  The line_comment regex is also restricted to
    // `/[^"\n]*/` so it never produces a *longer* match than this rule.
    string_literal_fragment: (_) => token(prec(1, /[^\\{"]+/)),

    identifier: (_) => /(_*[a-zA-Z][_a-zA-Z0-9]*)/,

    // Dot-chained path, e.g. `module.label` or `Direction.North`.
    identifier_path: ($) => seq($.identifier, repeat(seq(".", $.identifier))),

    // The `_` wildcard used in match patterns.
    _expr: ($) =>
      choice(
        $._literal,
        $.identifier_path,
        $.call_expr,
        $.subscript_expr,
        $.list_expr,
        $.map_expr,
        $.paren_expr,
        $.unary_expr,
        $.binary_expr,
        $.end_bang,
        $.todo_bang,
      ),

    // [ e, e, ... ]
    list_expr: ($) =>
      seq("[", commaSep(field("element", $._expr)), optional(","), "]"),

    // :{ key: value, ... }
    map_expr: ($) =>
      seq(
        ":{",
        commaSep(seq(field("key", $._expr), ":", field("value", $._expr))),
        optional(","),
        "}",
      ),

    // func(arg, ...)
    call_expr: ($) =>
      prec(
        13,
        seq(
          field("function", $.identifier_path),
          "(",
          commaSep(field("argument", $._expr)),
          optional(","),
          ")",
        ),
      ),

    // obj[key]  — left-associative, highest postfix precedence
    subscript_expr: ($) =>
      prec.left(
        12,
        seq(field("object", $._expr), "[", field("key", $._expr), "]"),
      ),

    // (expr)
    paren_expr: ($) => seq("(", $._expr, ")"),

    // end!  or  end!()
    // prec(1) on the longer form so that when `(` follows `end!` the parser
    // eagerly consumes it as part of end_bang rather than leaving it dangling.
    end_bang: (_) =>
      choice(prec(1, seq(token("end!"), "(", ")")), token("end!")),

    // todo!  or  todo!()
    todo_bang: (_) =>
      choice(prec(1, seq(token("todo!"), "(", ")")), token("todo!")),

    // Named node for unary operator tokens — makes the operator visible
    // as (unary_operator) in the concrete syntax tree.
    unary_operator: (_) => choice("!", "not", "-"),

    // Unary operators: !, not, - (prefix)
    unary_expr: ($) =>
      prec(
        11,
        seq(
          field("operator", alias(choice("!", "not", "-"), $.unary_operator)),
          field("operand", $._expr),
        ),
      ),

    // Named node for all binary operator tokens — makes the operator
    // visible as (binary_operator) in the concrete syntax tree.
    // Each prec.left(...) alternative below aliases its specific subset
    // of tokens to this type, preserving per-operator precedence.
    binary_operator: (_) =>
      choice(
        "*",
        "/",
        "//",
        "%",
        "+",
        "-",
        "<<",
        ">>",
        ">",
        "<",
        ">=",
        "<=",
        "==",
        "!=",
        "&",
        "^",
        "|",
        "and",
        "&&",
        "or",
        "||",
      ),

    // All binary operators — field names: left, operator, right.
    binary_expr: ($) =>
      choice(
        // precedence 10 — multiplicative
        prec.left(
          10,
          seq(
            field("left", $._expr),
            field(
              "operator",
              alias(choice("*", "/", "//", "%"), $.binary_operator),
            ),
            field("right", $._expr),
          ),
        ),
        // precedence 9 — additive
        prec.left(
          9,
          seq(
            field("left", $._expr),
            field("operator", alias(choice("+", "-"), $.binary_operator)),
            field("right", $._expr),
          ),
        ),
        // precedence 8 — bitwise shifts
        prec.left(
          8,
          seq(
            field("left", $._expr),
            field("operator", alias(choice("<<", ">>"), $.binary_operator)),
            field("right", $._expr),
          ),
        ),
        // precedence 7 — relational
        prec.left(
          7,
          seq(
            field("left", $._expr),
            field(
              "operator",
              alias(choice(">", "<", ">=", "<="), $.binary_operator),
            ),
            field("right", $._expr),
          ),
        ),
        // precedence 6 — equality
        prec.left(
          6,
          seq(
            field("left", $._expr),
            field("operator", alias(choice("==", "!="), $.binary_operator)),
            field("right", $._expr),
          ),
        ),
        // precedence 5 — bitwise AND
        prec.left(
          5,
          seq(
            field("left", $._expr),
            field("operator", alias("&", $.binary_operator)),
            field("right", $._expr),
          ),
        ),
        // precedence 4 — bitwise XOR
        prec.left(
          4,
          seq(
            field("left", $._expr),
            field("operator", alias("^", $.binary_operator)),
            field("right", $._expr),
          ),
        ),
        // precedence 3 — bitwise OR
        prec.left(
          3,
          seq(
            field("left", $._expr),
            field("operator", alias("|", $.binary_operator)),
            field("right", $._expr),
          ),
        ),
        // precedence 2 — logical AND
        prec.left(
          2,
          seq(
            field("left", $._expr),
            field("operator", alias(choice("and", "&&"), $.binary_operator)),
            field("right", $._expr),
          ),
        ),
        // precedence 1 — logical OR
        prec.left(
          1,
          seq(
            field("left", $._expr),
            field("operator", alias(choice("or", "||"), $.binary_operator)),
            field("right", $._expr),
          ),
        ),
      ),

    // -----------------------------------------------------------------------
    // Declarations
    // -----------------------------------------------------------------------
