tree-sitter-urd/test/corpus/expressions.txt
================================================================================
Identifier simple
================================================================================

foo

--------------------------------------------------------------------------------

(source_file
  (identifier_path
    (identifier)))

================================================================================
Identifier path two segments
================================================================================

Direction.North

--------------------------------------------------------------------------------

(source_file
  (identifier_path
    (identifier)
    (identifier)))

================================================================================
Identifier path three segments
================================================================================

my_mod.sub.value

--------------------------------------------------------------------------------

(source_file
  (identifier_path
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Identifier underscore prefix
================================================================================

_private

--------------------------------------------------------------------------------

(source_file
  (identifier_path
    (identifier)))

================================================================================
Identifier multiple underscores prefix
================================================================================

__internal

--------------------------------------------------------------------------------

(source_file
  (identifier_path
    (identifier)))

================================================================================
Unary bitwise not
================================================================================

!x

--------------------------------------------------------------------------------

(source_file
  (unary_expr
    operator: (unary_operator)
    operand: (identifier_path
      (identifier))))

================================================================================
Unary logical not
================================================================================

not ready

--------------------------------------------------------------------------------

(source_file
  (unary_expr
    operator: (unary_operator)
    operand: (identifier_path
      (identifier))))

================================================================================
Unary negate
================================================================================

-42

--------------------------------------------------------------------------------

(source_file
  (unary_expr
    operator: (unary_operator)
    operand: (integer)))

================================================================================
Unary negate float
================================================================================

-3.14

--------------------------------------------------------------------------------

(source_file
  (unary_expr
    operator: (unary_operator)
    operand: (float)))

================================================================================
Unary negate identifier
================================================================================

-damage

--------------------------------------------------------------------------------

(source_file
  (unary_expr
    operator: (unary_operator)
    operand: (identifier_path
      (identifier))))

================================================================================
Binary addition
================================================================================

a + b

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Binary subtraction
================================================================================

health - 30

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (integer)))

================================================================================
Binary multiplication
================================================================================

x * y

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Binary division
================================================================================

total / count

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Binary floor division
================================================================================

n // 2

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (integer)))

================================================================================
Binary modulo
================================================================================

n % 10

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (integer)))

================================================================================
Binary equality
================================================================================

x == 0

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (integer)))

================================================================================
Binary not equals
================================================================================

x != null

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (null)))

================================================================================
Binary greater than
================================================================================

health > 0

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (integer)))

================================================================================
Binary less than
================================================================================

level < 10

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (integer)))

================================================================================
Binary greater than or equals
================================================================================

hull_integrity >= 80

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (integer)))

================================================================================
Binary less than or equals
================================================================================

score <= 100

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (integer)))

================================================================================
Binary bitwise and
================================================================================

flags & mask

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Binary bitwise or
================================================================================

a | b

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Binary bitwise xor
================================================================================

a ^ b

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Binary left shift
================================================================================

x << 2

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (integer)))

================================================================================
Binary right shift
================================================================================

x >> 1

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (integer)))

================================================================================
Binary logical and keyword
================================================================================

alive and ready

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Binary logical and symbol
================================================================================

alive && ready

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Binary logical or keyword
================================================================================

dead or fleeing

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Binary logical or symbol
================================================================================

dead || fleeing

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Precedence multiplication before addition
================================================================================

a + b * c

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))))

================================================================================
Precedence addition before comparison
================================================================================

a + 1 > b

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (integer))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Precedence comparison before equality
================================================================================

a > 0 == true

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (integer))
    operator: (binary_operator)
    right: (boolean)))

================================================================================
Precedence equality before bitwise and
================================================================================

a == b & mask

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Precedence bitwise and before or
================================================================================

a & b | c

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Precedence bitwise or before logical and
================================================================================

a | b and c

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Precedence logical and before or
================================================================================

a and b or c

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Left associativity addition
================================================================================

a + b + c

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Left associativity multiplication
================================================================================

a * b * c

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Left associativity logical and
================================================================================

a and b and c

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Parenthesized expression changes precedence
================================================================================

(a + b) * c

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (paren_expr
      (binary_expr
        left: (identifier_path (identifier))
        operator: (binary_operator)
        right: (identifier_path (identifier))))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Nested parenthesized expressions
================================================================================

((x))

--------------------------------------------------------------------------------

(source_file
  (paren_expr
    (paren_expr
      (identifier_path
        (identifier)))))

================================================================================
Parenthesized literal
================================================================================

(42)

--------------------------------------------------------------------------------

(source_file
  (paren_expr
    (integer)))

================================================================================
Call expression no arguments
================================================================================

greet()

--------------------------------------------------------------------------------

(source_file
  (call_expr
    function: (identifier_path (identifier))))

================================================================================
Call expression one argument
================================================================================

say("hello")

--------------------------------------------------------------------------------

(source_file
  (call_expr
    function: (identifier_path (identifier))
    argument: (string
      (string_literal_fragment))))

================================================================================
Call expression multiple arguments
================================================================================

add(1, 2, 3)

--------------------------------------------------------------------------------

(source_file
  (call_expr
    function: (identifier_path (identifier))
    argument: (integer)
    argument: (integer)
    argument: (integer)))

================================================================================
Call expression with path
================================================================================

math.clamp(value, 0, 100)

--------------------------------------------------------------------------------

(source_file
  (call_expr
    function: (identifier_path (identifier) (identifier))
    argument: (identifier_path (identifier))
    argument: (integer)
    argument: (integer)))

================================================================================
Call expression with expression arguments
================================================================================

max(a + 1, b * 2)

--------------------------------------------------------------------------------

(source_file
  (call_expr
    function: (identifier_path (identifier))
    argument: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (integer))
    argument: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (integer))))

================================================================================
Call expression trailing comma
================================================================================

foo(1, 2,)

--------------------------------------------------------------------------------

(source_file
  (call_expr
    function: (identifier_path (identifier))
    argument: (integer)
    argument: (integer)))

================================================================================
end! bare
================================================================================

end!

--------------------------------------------------------------------------------

(source_file
  (end_bang))

================================================================================
end! with parens
================================================================================

end!()

--------------------------------------------------------------------------------

(source_file
  (end_bang))

================================================================================
todo! bare
================================================================================

todo!

--------------------------------------------------------------------------------

(source_file
  (todo_bang))

================================================================================
todo! with parens
================================================================================

todo!()

--------------------------------------------------------------------------------

(source_file
  (todo_bang))

================================================================================
Subscript simple
================================================================================

list[0]

--------------------------------------------------------------------------------

(source_file
  (subscript_expr
    object: (identifier_path (identifier))
    key: (integer)))

================================================================================
Subscript with identifier key
================================================================================

map[key]

--------------------------------------------------------------------------------

(source_file
  (subscript_expr
    object: (identifier_path (identifier))
    key: (identifier_path (identifier))))

================================================================================
Subscript with string key
================================================================================

dict["name"]

--------------------------------------------------------------------------------

(source_file
  (subscript_expr
    object: (identifier_path (identifier))
    key: (string
      (string_literal_fragment))))

================================================================================
Subscript chained
================================================================================

grid[row][col]

--------------------------------------------------------------------------------

(source_file
  (subscript_expr
    object: (subscript_expr
      object: (identifier_path (identifier))
      key: (identifier_path (identifier)))
    key: (identifier_path (identifier))))

================================================================================
Subscript with expression key
================================================================================

arr[i + 1]

--------------------------------------------------------------------------------

(source_file
  (subscript_expr
    object: (identifier_path (identifier))
    key: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (integer))))

================================================================================
List expression empty
================================================================================

[]

--------------------------------------------------------------------------------

(source_file
  (list_expr))

================================================================================
List expression single element
================================================================================

[1]

--------------------------------------------------------------------------------

(source_file
  (list_expr
    element: (integer)))

================================================================================
List expression multiple elements
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (list_expr
    element: (integer)
    element: (integer)
    element: (integer)))

================================================================================
List expression trailing comma
================================================================================

[1, 2,]

--------------------------------------------------------------------------------

(source_file
  (list_expr
    element: (integer)
    element: (integer)))

================================================================================
List expression mixed types
================================================================================

[1, "hello", true, null]

--------------------------------------------------------------------------------

(source_file
  (list_expr
    element: (integer)
    element: (string (string_literal_fragment))
    element: (boolean)
    element: (null)))

================================================================================
List expression nested
================================================================================

[[1, 2], [3, 4]]

--------------------------------------------------------------------------------

(source_file
  (list_expr
    element: (list_expr
      element: (integer)
      element: (integer))
    element: (list_expr
      element: (integer)
      element: (integer))))

================================================================================
Map expression empty
================================================================================

:{}

--------------------------------------------------------------------------------

(source_file
  (map_expr))

================================================================================
Map expression single pair
================================================================================

:{ name: "ARIA" }

--------------------------------------------------------------------------------

(source_file
  (map_expr
    key: (identifier_path (identifier))
    value: (string (string_literal_fragment))))

================================================================================
Map expression multiple pairs
================================================================================

:{ name: "ARIA", color: "cyan" }

--------------------------------------------------------------------------------

(source_file
  (map_expr
    key: (identifier_path (identifier))
    value: (string (string_literal_fragment))
    key: (identifier_path (identifier))
    value: (string (string_literal_fragment))))

================================================================================
Map expression trailing comma
================================================================================

:{ x: 1, y: 2, }

--------------------------------------------------------------------------------

(source_file
  (map_expr
    key: (identifier_path (identifier))
    value: (integer)
    key: (identifier_path (identifier))
    value: (integer)))

================================================================================
Map expression with integer keys
================================================================================

:{ 1: "one", 2: "two" }

--------------------------------------------------------------------------------

(source_file
  (map_expr
    key: (integer)
    value: (string (string_literal_fragment))
    key: (integer)
    value: (string (string_literal_fragment))))

================================================================================
Map expression expression values
================================================================================

:{ score: base + bonus }

--------------------------------------------------------------------------------

(source_file
  (map_expr
    key: (identifier_path (identifier))
    value: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))))

================================================================================
Complex expression chain
================================================================================

a + b * c - d / e

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (binary_expr
        left: (identifier_path (identifier))
        operator: (binary_operator)
        right: (identifier_path (identifier))))
    operator: (binary_operator)
    right: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))))

================================================================================
Unary in binary expression
================================================================================

a + -b

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (identifier_path (identifier))
    operator: (binary_operator)
    right: (unary_expr
      operator: (unary_operator)
      operand: (identifier_path (identifier)))))

================================================================================
Not in logical expression
================================================================================

not a and b

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (unary_expr
      operator: (unary_operator)
      operand: (identifier_path (identifier)))
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Dice in expression
================================================================================

2d6 + bonus

--------------------------------------------------------------------------------

(source_file
  (binary_expr
    left: (dice)
    operator: (binary_operator)
    right: (identifier_path (identifier))))

================================================================================
Multiple statements on separate lines
================================================================================

x
y
z

--------------------------------------------------------------------------------

(source_file
  (identifier_path (identifier))
  (identifier_path (identifier))
  (identifier_path (identifier)))

================================================================================
Line comment ignored
================================================================================

42 # this is a comment

--------------------------------------------------------------------------------

(source_file
  (integer)
  (line_comment))

================================================================================
Standalone line comment
================================================================================

# full line comment

--------------------------------------------------------------------------------

(source_file
  (line_comment))
